; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_onefile.c_fsAccess.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_onefile.c_fsAccess.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { {}* }
%struct.TYPE_7__ = type { %struct.TYPE_8__*, %struct.TYPE_6__* }
%struct.TYPE_8__ = type { i64, %struct.TYPE_8__*, i32 }

@SQLITE_ACCESS_EXISTS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"-journal\00", align 1
@SQLITE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i8*, i32, i32*)* @fsAccess to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fsAccess(%struct.TYPE_6__* %0, i8* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_6__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca %struct.TYPE_7__*, align 8
  %11 = alloca %struct.TYPE_8__*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_6__*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %16 = bitcast %struct.TYPE_6__* %15 to %struct.TYPE_7__*
  store %struct.TYPE_7__* %16, %struct.TYPE_7__** %10, align 8
  store i32 0, i32* %12, align 4
  %17 = load i8*, i8** %7, align 8
  %18 = call i32 @strlen(i8* %17)
  store i32 %18, i32* %13, align 4
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* @SQLITE_ACCESS_EXISTS, align 4
  %21 = icmp ne i32 %19, %20
  br i1 %21, label %22, label %36

22:                                               ; preds = %4
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %24 = bitcast %struct.TYPE_6__* %23 to %struct.TYPE_7__*
  %25 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %24, i32 0, i32 1
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %25, align 8
  store %struct.TYPE_6__* %26, %struct.TYPE_6__** %14, align 8
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 0
  %29 = bitcast {}** %28 to i32 (%struct.TYPE_6__*, i8*, i32, i32*)**
  %30 = load i32 (%struct.TYPE_6__*, i8*, i32, i32*)*, i32 (%struct.TYPE_6__*, i8*, i32, i32*)** %29, align 8
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %32 = load i8*, i8** %7, align 8
  %33 = load i32, i32* %8, align 4
  %34 = load i32*, i32** %9, align 8
  %35 = call i32 %30(%struct.TYPE_6__* %31, i8* %32, i32 %33, i32* %34)
  store i32 %35, i32* %5, align 4
  br label %94

36:                                               ; preds = %4
  %37 = call i32 @strlen(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %38 = icmp eq i32 %37, 8
  %39 = zext i1 %38 to i32
  %40 = call i32 @assert(i32 %39)
  %41 = load i32, i32* %13, align 4
  %42 = icmp sgt i32 %41, 8
  br i1 %42, label %43, label %54

43:                                               ; preds = %36
  %44 = load i8*, i8** %7, align 8
  %45 = load i32, i32* %13, align 4
  %46 = sub nsw i32 %45, 8
  %47 = sext i32 %46 to i64
  %48 = getelementptr inbounds i8, i8* %44, i64 %47
  %49 = call i64 @strcmp(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* %48)
  %50 = icmp eq i64 %49, 0
  br i1 %50, label %51, label %54

51:                                               ; preds = %43
  %52 = load i32, i32* %13, align 4
  %53 = sub nsw i32 %52, 8
  store i32 %53, i32* %13, align 4
  store i32 1, i32* %12, align 4
  br label %54

54:                                               ; preds = %51, %43, %36
  %55 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %56 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %55, i32 0, i32 0
  %57 = load %struct.TYPE_8__*, %struct.TYPE_8__** %56, align 8
  store %struct.TYPE_8__* %57, %struct.TYPE_8__** %11, align 8
  br label %58

58:                                               ; preds = %72, %54
  %59 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  %60 = icmp ne %struct.TYPE_8__* %59, null
  br i1 %60, label %61, label %69

61:                                               ; preds = %58
  %62 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  %63 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %62, i32 0, i32 2
  %64 = load i32, i32* %63, align 8
  %65 = load i8*, i8** %7, align 8
  %66 = load i32, i32* %13, align 4
  %67 = call i64 @strncmp(i32 %64, i8* %65, i32 %66)
  %68 = icmp ne i64 %67, 0
  br label %69

69:                                               ; preds = %61, %58
  %70 = phi i1 [ false, %58 ], [ %68, %61 ]
  br i1 %70, label %71, label %76

71:                                               ; preds = %69
  br label %72

72:                                               ; preds = %71
  %73 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  %74 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %73, i32 0, i32 1
  %75 = load %struct.TYPE_8__*, %struct.TYPE_8__** %74, align 8
  store %struct.TYPE_8__* %75, %struct.TYPE_8__** %11, align 8
  br label %58

76:                                               ; preds = %69
  %77 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  %78 = icmp ne %struct.TYPE_8__* %77, null
  br i1 %78, label %79, label %89

79:                                               ; preds = %76
  %80 = load i32, i32* %12, align 4
  %81 = icmp ne i32 %80, 0
  br i1 %81, label %82, label %87

82:                                               ; preds = %79
  %83 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  %84 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %83, i32 0, i32 0
  %85 = load i64, i64* %84, align 8
  %86 = icmp sgt i64 %85, 0
  br label %87

87:                                               ; preds = %82, %79
  %88 = phi i1 [ true, %79 ], [ %86, %82 ]
  br label %89

89:                                               ; preds = %87, %76
  %90 = phi i1 [ false, %76 ], [ %88, %87 ]
  %91 = zext i1 %90 to i32
  %92 = load i32*, i32** %9, align 8
  store i32 %91, i32* %92, align 4
  %93 = load i32, i32* @SQLITE_OK, align 4
  store i32 %93, i32* %5, align 4
  br label %94

94:                                               ; preds = %89, %22
  %95 = load i32, i32* %5, align 4
  ret i32 %95
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i64 @strncmp(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
